<resources>
    <string name="app_name">QuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz">Quiz</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="questions_amount">Questions amount :</string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="start">start</string>
    <string name="correct_answers">Correct answers</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="clear_history">Clear history</string>
</resources>