<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_graph"
    app:startDestination="@id/navigation_quiz">

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="kg.geektech.quizapp.presentation.quiz.QuizFragment"
        tools:layout="@layout/fragment_quiz"
        android:label="@string/quiz"/>
    <fragment
        android:id="@+id/navigation_history"
        android:name="kg.geektech.quizapp.presentation.history.HistoryFragment"
        tools:layout="@layout/fragment_history"
        android:label="@string/history"/>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="kg.geektech.quizapp.presentation.settings.SettingsFragment"
        tools:layout="@layout/fragment_settings"
        android:label="@string/settings"/>

</navigation>