<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.quiz.QuizFragment">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/img_quiz_fragment"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questions_amount"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="10" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/sb_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:max="50"
            android:min="1"
            android:progressTint="@color/blue"
            android:thumbTint="@color/blue"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category" />

                <Spinner
                    android:id="@+id/spinner_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficulty" />

            <Spinner
                android:id="@+id/spinner_difficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:layout_gravity="center"
            android:text="@string/start"
            android:padding="14dp"
            app:cornerRadius="6dp"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="50dp"/>

    </LinearLayout>

</LinearLayout>